fdo#50509 MSI: UI language selection from command line (e.g. silent install)

Change-Id: I1206a0c7f8508942eb844869fe1c75a48a9e01fd